tests/baselines/reference/asyncFunctionExpression5.errors.txt
tests/cases/conformance/async/downlevel/asyncFunctionExpression/asyncFunctionExpression5.ts(1,15): error TS2300: Duplicate identifier 'Promise'.
tests/cases/conformance/async/downlevel/asyncFunctionExpression/asyncFunctionExpression5.ts(6,27): error TS1138: Parameter declaration expected.
tests/cases/conformance/async/downlevel/asyncFunctionExpression/asyncFunctionExpression5.ts(6,32): error TS1005: ',' expected.
tests/cases/conformance/async/downlevel/asyncFunctionExpression/asyncFunctionExpression5.ts(6,33): error TS1134: Variable declaration expected.
tests/cases/conformance/async/downlevel/asyncFunctionExpression/asyncFunctionExpression5.ts(6,35): error TS2300: Duplicate identifier 'Promise'.
tests/cases/conformance/async/downlevel/asyncFunctionExpression/asyncFunctionExpression5.ts(6,42): error TS1005: '=' expected.
tests/cases/conformance/async/downlevel/asyncFunctionExpression/asyncFunctionExpression5.ts(6,42): error TS2352: Neither type '{}' nor type 'void' is assignable to the other.


==== tests/cases/conformance/async/downlevel/asyncFunctionExpression/asyncFunctionExpression5.ts (7 errors) ====
    declare class Promise<T> {
                  ~~~~~~~
!!! error TS2300: Duplicate identifier 'Promise'.
        constructor(init: (resolve: (value?: T | IPromise<T>) => void, reject: (reason?: any) => void) => void);
        then<TResult>(onfulfilled?: (value: T) => TResult | IPromise<TResult>, onrejected?: (reason: any) => TResult | IPromise<TResult>): Promise<TResult>;
    }
    
    var foo = async function (await): Promise<void> {
                              ~~~~~
!!! error TS1138: Parameter declaration expected.
                                   ~
!!! error TS1005: ',' expected.
                                    ~
!!! error TS1134: Variable declaration expected.
                                      ~~~~~~~
!!! error TS2300: Duplicate identifier 'Promise'.
                                             ~
!!! error TS1005: '=' expected.
                                             ~~~~~~~~
    }
    ~
!!! error TS2352: Neither type '{}' nor type 'void' is assignable to the other.